--- a/Games/Tetris/index.css
+++ b/Games/Tetris/index.css
@@ -65,6 +65,10 @@ body {
   text-align: center;
 }
 
+#board > #settings > #keys table tr td {
+  white-space: nowrap;
+}
+
 /*#board > #game {
   border: 1px solid black;
   height: 75vh;
